# LIB-NocoDB_SimpleClient

./: .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.MD  CHANGELOG.md  CODE_OF_CONDUCT.MD  CONTRIBUTING.MD  Make.cmd  Makefile  README.MD  README.md  SECURITY.MD  SECURITY.md  api-response-analysis.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/config/pr-labeler/: path-labels.yml  triage-rules.yml
.github/config/security-policy/: config.yml
.github/workflows/: README.md  ai-issue-summary.yml  ci-cd.yml  documentation.yml  feature-test.yml  pr-labeler.yml  python-automatic-release.yml  release.yml  security.yml  teams-notifications.yml
docs/: ADVANCED-USEAGE.MD  API_COMPARISON_README.md  API_V2_V3_MIGRATION_GUIDE.md  NOCODB_API_V2_V3_COMPARISON.md  README.template.MD  SECURITY.template.MD  SWAGGER_SOURCE.md  advanced_usage.md  api_reference.md  nocodb-openapi-data-v3.json  nocodb-openapi-data.json  nocodb-openapi-meta.json  swagger-v3-validation-patch.json  swagger-v3.json
examples/: README.md  advanced_querying.py  api_version_example.py  basic_usage.py  context_manager_usage.py  file_operations.py
scripts/: README-CI-SETUP.md  check.py  check_license_headers.py  ci-setup.sh  docker-test.py  project_config.py  quick-test.cmd  quick-test.py  quick-test.sh  run-all.cmd  run-all.py  run-all.sh  security_checks.py  setup.cmd  setup.py  setup.sh  show-config.py  smart-commit.cmd  smart-commit.sh  validate.cmd  validate.py  validate.sh
scripts/migration/: analyze_api_detailed.py  analyze_api_diff.py  analyze_schemas.py
src/nocodb_simple_client/: __init__.py  api_version.py  async_client.py  base_resolver.py  cache.py  cli.py  client.py  columns.py  config.py  exceptions.py  file_operations.py  links.py  meta_client.py  models.py  pagination.py  query_builder.py  table.py  validation.py  views.py  webhooks.py
tests/: __init__.py  conftest.py  pytest.ini  test_api_version.py  test_async_client.py  test_base_resolver.py  test_bulk_operations.py  test_bulk_operations_integration.py  test_cache.py  test_client.py  test_client_crud.py  test_columns.py  test_error_and_attachments.py  test_exceptions.py  test_file_operations.py  test_file_operations_integration.py  test_filter_builder.py  test_integration.py  test_links.py  test_meta_client.py  test_meta_client.py.disabled  test_pagination.py  test_performance.py  test_public_api.py  test_query_builder.py  test_security.py  test_table.py  test_v3_query_params.py  test_version_switching.py  test_views.py  test_webhooks.py
tests/docker/: Dockerfile.test  docker-compose.test.yml
