[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nocodb-simple-client"
dynamic = ["version"]
description = "A simple and powerful NocoDB REST API client for Python"
readme = "README.MD"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "BAUER GROUP (Karl Bauer)", email = "karl.bauer@bauer-group.com"},
]
keywords = [
    "nocodb",
    "api",
    "client",
    "rest",
    "database",
    "low-code",
    "no-code"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]
dependencies = [
    "requests>=2.25.0",
    "requests-toolbelt>=0.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
    "tox>=4.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.5.0",
    "mkdocs-autorefs>=0.4.1",
    "mkdocstrings[python]>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/bauer-group/nocodb-simple-client"
Documentation = "https://github.com/bauer-group/nocodb-simple-client#readme"
Repository = "https://github.com/bauer-group/nocodb-simple-client.git"
"Bug Tracker" = "https://github.com/bauer-group/nocodb-simple-client/issues"
Changelog = "https://github.com/bauer-group/nocodb-simple-client/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/nocodb_simple_client/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nocodb_simple_client"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/nocodb_simple_client",
    "/tests",
    "/examples",
    "/docs",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

# Testing configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src/nocodb_simple_client"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Code formatting
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
'''

# Linting
[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused-function-args
    "SIM101", # duplicate-isinstance-call
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG", "S101"]

[tool.ruff.isort]
known-first-party = ["nocodb_simple_client"]

# Type checking
[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false